[tool.poetry]
name = "kingdom-sdk"
version = "1.0.0"
description = "Library containing the core modules for the kingdom-python-server"
authors = ["William Abreu <william@t10.digital>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.25"
pytz = "^2021.3"
jinjasql = "^0.1.8"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pydocstyle = "^6.1.1"
pre-commit = "^2.15.0"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pyclean = "^2.0.0"
toml = "^0.10.2"
pytest = "^6.2.5"
types-pytz = "^2021.3.0"
alembic = "^1.7.4"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.1"
sql-formatter = "^0.6.2"
types-redis = "^3.5.15"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# See: https://mypy.readthedocs.io/en/stable/config_file.html

[tool.mypy]
exclude = "(\\..*|env|venv|__pycache__|build|dist)/$"
files = ["kingdom_sdk"]
python_version = "3.9"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true
